@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="plugin.video.retrospect"
-        version="4.1.8.0"
+        version="4.1.8.1"
         name="Retrospect"
         provider-name="Bas Rieter">
 
@@ -117,15 +117,16 @@
         <description lang="en">Retrospect uses the official websites of a lot of different broadcasting companies (mainly Dutch, Belgian, British and Swedish) to make their re-run episodes available on the Kodi platform. More information can be found at www.rieter.net.[CR][CR]Retrospect reports back usage statistics to our servers. This option can be disabled from the add-on settings.</description>
         <disclaimer lang="en">Retrospect is provided as is. We do not take any responsibility for possible (but highly unlikely) damage cause to your system. Nor do we take responsibility for the content that can be watched via this add-on.</disclaimer>
         <language>en nl de se no lt lv fi</language>
-        <news>[B]Retrospect v4.1.8.0 - Changelog - 2019-02-13[/B]
+        <news>[B]Retrospect v4.1.8.1 - Changelog - 2019-02-14[/B]
 
 !! Due to the changing of the add-on ID, there is an extra add-on data migration step required. This happens as soon as you install the new version. !!
 
 [B]Framework related[/B]
 * Changed: renamed the add-on ID from net.rieter.xot to plugin.video.retrospect. This is more in line with Kodi conventions.
+* Fixed: migration fixed if not local settings were present.
 
 [B]GUI/Settings/Language related[/B]
--
+* Updated: UK and NL translation.
 
 [B]Channel related[/B]
 * Added: Category thumbs for NRK.no (Fixes #1100)
